# LED-Matrix-Clock

./: .gitignore  CMakeLists.txt  DHT11.cpp  DHT11.h  LICENSE  Matrix_Numbers.cpp  Matrix_Numbers.h  README.md  Segment_States.cpp  Segment_States.h  main.cpp  max7219.cpp  max7219.h  pico_rtc.cpp  pico_rtc.h
Fritzing/: Matrix Clock.fzz
Lab-Sheets/: Lab-Sheet-1.ipynb  Lab-Sheet-3.ipynb
